--- a/test/fixtures/entregadors.yml
+++ b/test/fixtures/entregadors.yml
@@ -1,3 +1,15 @@
+# == Schema Information
+# Schema version: 20101027192309
+#
+# Table name: entregadors
+#
+#  id         :integer         not null, primary key
+#  nome       :string(255)
+#  filial     :integer
+#  created_at :datetime
+#  updated_at :datetime
+#
+
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
 one:
